--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "antd": "^4.14.1",
+    "cookie-cutter": "^0.2.0",
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
